force-app/main/default/objects/Boarding_Pass__c/Boarding_Pass__c.object-meta.xml
<CustomObject>
    <label>Boarding Pass</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Boarding Pass Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boarding Pass</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>