force-app/main/default/objects/Boarding_Pass__c/fields/Baggage__c.field-meta.xml
<CustomField>
    <fullName>Baggage__c</fullName>
    <label>Baggage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>