force-app/main/default/objects/Boarding_Pass__c/fields/Flight_Id__c.field-meta.xml
<CustomField>
    <fullName>Flight_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight Id</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Boarding Pass</relationshipLabel>
    <relationshipName>Boarding_Pass</relationshipName>
    <type>Lookup</type>
</CustomField>