force-app/main/default/objects/Boarding_Pass__c/fields/hasboarded__c.field-meta.xml
<CustomField>
    <fullName>hasboarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasboarded</label>
    <type>Checkbox</type>
</CustomField>