force-app/main/default/objects/Boarding_Pass__c/fields/hascheckedin__c.field-meta.xml
<CustomField>
    <fullName>hascheckedin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hascheckedin</label>
    <type>Checkbox</type>
</CustomField>