force-app/main/default/objects/Boarding_Pass__c/fields/Passenger_Id__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Id__c</fullName>
    <label>Passenger Id</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Boarding Pass</relationshipLabel>
    <relationshipName>Boarding_Pass</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>