force-app/main/default/objects/Boarding_Pass__c/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Id</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Boarding Pass</relationshipLabel>
    <relationshipName>Boarding_Pass</relationshipName>
    <type>Lookup</type>
</CustomField>