force-app/main/default/objects/Boarding_Pass__c/validationRules/departure_less_than_hour.validationRule-meta.xml
<ValidationRule>
    <fullName>departure_less_than_hour</fullName>
    <active>true</active>
    <description>if flight departure time is less than an hour and hasboarded is not set to true then throw error</description>
    <errorConditionFormula>AND(
    NOT(hasboarded__c),
    (Flight_Id__r.Departure_date_and_Time__c - NOW()) * 1440 &lt; 60,
    (Flight_Id__r.Departure_date_and_Time__c - NOW()) * 1440 &gt;= 0
)</errorConditionFormula>
    <errorMessage>Boarding pass cannot be generated</errorMessage>
</ValidationRule>